# Numerolog_free

./: .gitignore  README.md  project.txt  pyproject.toml  requirements.txt  test.py
Additional/JNotebooks/: all_test.ipynb  count_date.ipynb
business_logic/: analytic_class.py  arcanes_classes.py  star_analytic_class.py
classes/: arcanes_classes.py  document_classes.py
config/: settings.py  templates_path.py
constants/: classes.py  coordinates.pkl  fields.py  fonts.py
data/numerical_data/: object_names.py
data/text_data/: Личность.txt
data_requests/: data_combiner.py  data_for_images.py  data_for_text.py
figma_processing/: figma_search.py  templates_creator.py  templates_creator_async.py
image_processing/: figma_search.py
input_module/: clients_info.py
page_processing/: acranes2image.py  img2pdf.py  text2pdf.py
report_storage/: report_classes.py  star_image_creating.py
report_storage/configurations/: star_fonts_colors.py  star_position.py
reports/: pdf_creator.py  pdf_utility.py  pdf_utility_new.py  pdf_utility_working.py
src/: arcanes_manager.py  clients_info.py  coordinates.py  coords.py  enter_service.py  fate_matrix.py  figma_search.py  main.py  matrix  package  package.py  pages_from_analitics.py  pages_from_arcanes.py  pages_from_text.py  star  test.py
src/Numerolog_free.egg-info/: PKG-INFO  (+4 more)
tests/: add_path.py  test_gui_main.py
text_storage/: DB_star_dict.py  all_data_dict.py  data_1_page.py  page_dicts.py  star_money_dict.py  star_personality_dict.py  star_spirituality_dict.py
utils/: fill_html_pages.py  math_utils.py
(+34 files in other folders)
